fix: Remove white spacing causing h.scroll on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,10 +5,23 @@
   padding:0;
 }
 
-body {
+body{
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
     font-size: 19px;
+}
+
+.row{
+    margin-left: 0;
+    margin-right: 0;
+}
+
+.container-fluid{
+    padding-left: 0;
+}
+
+.col{
+    padding-left: 0;
 }
 
 /* ******************************************************** Header Section */
